css/contatc.css
.container-contact, 
.container-form {
    margin: 30px auto;
}

.container-contact {
    width: 80vw;
    text-align: center;
}

.container-form {
    width: 80vw;
}

h1 {
    text-align: center;
    font-style: normal;
    font-weight: bold;
    color: #000;
}

legend {
    font-style: italic;
}

label {
    margin: 1rem auto 0;
    font-weight: bold;
}

label > textarea {
    padding-left: 10px;
}

input:not(.input-form-checkbox) {
    margin-top: .4rem;
    width: 80vw;
}

input {
    padding-left: 5px;
}

input::placeholder,
textarea::placeholder {
    font-style: italic;
}

#user-nasc {
    padding: 5px;
}

select {
    width: 80vw;
}

.user-message {
    margin: 30px auto 0;
}

textarea {
    display: block;
    margin: 10px auto;
    width: 80vw;
    height: auto;
    text-align: left;
    padding: 5px 10px;
}

.color-white {
    color: #FFF;
}

.output-name-on,
.output-nasc-on,
.output-city-on,
.output-email-on,
.output-phone-on,
.output-message-on {
    color: #F00;
    display: block;
    font-size: .8rem;
    font-style: italic;
    text-indent: 10px;
}

.output-name-off,
.output-nasc-off,
.output-city-off,
.output-email-off,
.output-phone-off, 
.output-message-off {
    display: none;
}

/* ---------- > MODAL < ------------ */

.modalContainer {
    margin: 0 auto;
    padding: 0;
    width: 100vw;
    height: 100vh;
    position: absolute;
    top: 0;
    left: 0;
    background: rgba(0, 0, 0, 0.5);
    z-index: 999;
    justify-content: center;
    align-items: center;
    display: flex;
}


.modalContainer.showModal {
    display: flex;
}

.modalBox {
    background-color: #fff;
    width: 70%;
    min-width: 250px;
    max-width: 600px;
    max-height: 600px;
    padding: 20px 20px;
    align-items: center;
    border-radius: 10px;
    position: relative;
}

.closeModal {
    position: absolute;
    top: 2px;
    right: 2px;
    width: 30px;
    height: 30px;
    border-radius: 50%;
    border: 2px solid #fff;
    background: rgba(68, 0, 195, 1);
    color: white;
    cursor: pointer;
}

.closeModal:hover {
    background-color: rgba(252, 149, 35, 0.8);
}

.modalText {
    color: #fc9523;
    font-size: 1.2rem;
}

.modalText-h2 {
    color: #fc9523;
    font-weight: bold;
}

.showValorMessage2 {
    margin: 0 auto;
    padding: 1rem;
    font-size: 1rem;
}

.resultImg {
    border-radius: 20px;
    margin: 0 auto 20px;
    width: 80%;
    max-width: 250px;
}

@keyframes modalBox {
    from {
        opacity: 0;
        transform: translate3d(0, -60px, 0);
    }
    to {
        opacity: 1;
        transform: translate3d(0, 0, 0);
    }
}

.showModal .modalBox {
animation: modalBox 0.3s;
}

@media(min-width: 576px) {
      /* modal */
    .modalText {
        font-size: 1.4rem;
    }

    .showValorMessage2 {
        font-size: 1.2rem;
    }
}

@media(min-width: 1200px) {
    .container-contact {
        width: 50vw;
    
    }
    
    .container-form {
        width: 50vw;
        margin: 0 auto
    }

    input:not(.input-form-checkbox) {
        margin-top: 1rem;
        width: 50vw;
    }

    select {
        width: 50vw;
    }

    textarea {
        width: 50vw;
    }
}

